--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,15 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This is the README for the Sun City Festival's Swim Club!
 
-Things you may want to cover:
+Designed and Programmed by Thomas Jacob Jr. and Jean-Denis Vauguet
 
-* Ruby version
+* Ruby version 4.2.5
 
-* System dependencies
+Final Application should include the following:
 
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+- Three distinct roles for users -- non-members (public), members, and admins.
+- ActiveAdmin Panel for the creation of new users and pages by admins
+- Integration of all original information from existing swim club site
+- Navigation links to several pages of information (contacts, videos, etc)
+- Calendar of upcoming swimming events
