--- a/README.rdoc
+++ b/README.rdoc
@@ -1,15 +1,23 @@
-== README
+## This is the README for the Sun City Festival's Swim Club!
 
-This is the README for the Sun City Festival's Swim Club!
+Designed and Programmed by Thomas Jacob Jr. at [Bloc](http://bloc.io)
+Coding Bootcamp
 
-Designed and Programmed by Thomas Jacob Jr. and Jean-Denis Vauguet
+# About
 
-* Ruby version 4.2.5
-
-Final Application should include the following:
+This project is a replica website and a work in progress.
+It is a Ruby on Rails + HTML/CSS project that should implement the following:
 
 - Three distinct roles for users -- non-members (public), members, and admins.
 - ActiveAdmin Panel for the creation of new users and pages by admins
 - Integration of all original information from existing swim club site
 - Navigation links to several pages of information (contacts, videos, etc)
 - Calendar of upcoming swimming events
+
+# Installation
+
+Simply download or clone the repo, then run `bundle install` from your
+command line.
+
+To view the project in your browser, run `rails server` from the command line
+and navigate to localhost:3000. 
